# LuminAI

./: .gitignore  API_key.example  README.md  docker-compose.yml  jira_board_tasks.md  jira_board_tasks_sprint1.md  onboarding_guide.md
.github/workflows/: ci-frontend.yml  ci-java.yml
core-backend/: build.gradle  gradle.properties  settings.gradle
data-engine/: .env.example  .gitignore  Dockerfile  README.md  dagster_workspace.yaml  main.py  pyproject.toml
data-engine/app/: config.py  main.py
data-engine/app/api/: analytics.py  health.py  processing.py
data-engine/app/kafka/: __init__.py  consumers.py  producers.py
data-engine/app/processing/: trigger.py
data-engine/app/processing/pipelines/: __init__.py  cleaning_pipeline.py  ingest_pipeline.py
data-engine/tests/: test_cleaning_pipeline.py  test_config.py  test_health.py
docs/: 01-system-requirements.md  02-architecture.md  03-data-model.md  04-feature-backlog.md  05-sprint-plan.md  06-technology-stack.md  07-security-architecture.md
docs/tasks/: E1-tech-lead-tasks.md  E2-backend-lead-tasks.md  E3-backend-eng2-tasks.md  E4-frontend-tasks.md  E5-devops-tasks.md  E6-data-ai-tasks.md  devops_sprint1_deploy.md  frontend_e2e_wiring_tasks.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  openapitools.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.ts  App.tsx  index.css
frontend/src/lib/: api.ts  (+1 more)
infra/keycloak/: luminai-realm.json
infra/terraform/: .gitignore
luminai-platform/: docker-compose.yml
luminai-platform/core-backend/: Dockerfile  build.gradle
(+110 files in other folders)
